[package]
name = "tlsn-benches"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tlsn-core.workspace = true
tlsn-prover.workspace = true
tlsn-verifier.workspace = true
tlsn-server-fixture.workspace = true
tlsn-tls-core.workspace = true
futures.workspace = true
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-std",
    "fs",
] }
tokio-util.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
authdecode = { path ="../../authdecode" }
rand.workspace = true
rand_chacha = "0.3.1"
hex = "0.4.3"
num-bigint = { version = "0.4.4", features = ["rand"] }
num = "0.4.1" 

[[bin]]
name = "setup_network"
path = "src/setup_network.rs"

[[bin]]
name = "cleanup_network"
path = "src/cleanup_network.rs"

[[bin]]
name = "prover"
path = "src/prover.rs"

[[bin]]
name = "verifier"
path = "src/verifier.rs"

[[bin]]
name = "authdecode"
path = "src/authdecode.rs"
